<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cuan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="content_descriptio_background">background</string>
    <string name="content_description_icon">icon</string>
    <string name="nama_user">Nama User</string>
    <string name="whatsapp_number">08975601600</string>
    <string name="alamat">Alamat</string>
    <string name="ubah_akun">Ubah Akun</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="keluar">Keluar</string>
    <string name="about_us">Tentang CuanCuan</string>
    <string name="version">Version 1.0.0</string>
    <string name="search_rekomendasi_text">Rekomendasi untuk anda</string>
    <string name="lelang">Barang Lelang Minggu Ini</string>
    <string name="banner_fasion">Cari Sepatu</string>
    <string name="banner_smartphone">Cari Smartphone</string>
    <string name="welcome">Selamat Datang</string>
    <string name="user">User</string>
    <string name="background">Background</string>
    <string name="ldp">Lengkapi Detail Produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="rp">Rp 0,00</string>
    <string name="kategori">Kategori</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="contoh">Contoh: Jalan Ikan Hiu 33</string>
    <string name="foto_produk">Foto Produk</string>
    <string name="terbitkan">Terbitkan</string>
    <string name="harga">Rp 17.000</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="photo">Photo</string>
    <string name="semua_barang">Semua Barang</string>
    <string name="dalam_pengajuan">Dalam Pengajuan</string>
    <string name="pengajuan_ditolak">Pengajuan Ditolak</string>
    <string name="pengajuan_diterima">Pengajuan Diterima</string>
    <string name="sedang_ditawar">Sedang Ditawar</string>
    <string name="see_all"><u>See All</u></string>
    <string name="nama_penjual">Nama Penjual</string>
    <string name="foto_profile">Foto Profile</string>
    <string name="kota">Nama Kota</string>
    <string name="lokasi">Lokasi</string>
    <string name="preview">Preview</string>
    <string name="riwayat_tawaran">Riwayat Tawaran</string>
    <string name="isi_deskripsi">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="nego">Saya Tertarik dan Ingin Nego</string>
    <string name="masukkan">Masukkan Harga Tawarmu</string>
    <string name="detail_product">Detail Product</string>
    <string name="category">Category</string>
    <string name="isi">Harga tawaranmu akan diketahui penjual, jika penjual cocok kamu akan segera dihubungi penjual</string>
    <string name="harga_tawaran">Harga Tawaran</string>
    <string name="angka">Rp 0,000</string>
    <string name="kirim">Kirim</string>
    <string name="transaksi">Transaksi</string>
    <string name="pembelian">Pembelian</string>
    <string name="semua">Semua</string>
    <string name="pengajuan">Dalam Pengajuan</string>
    <string name="diterima">Pengajuan Diterima</string>
    <string name="ditolak">Pengajuan Ditolak</string>
    <string name="histori">Histori Pembelian</string>
    <string name="penjualan">Penjualan</string>
    <string name="jual">Jual</string>
    <string name="semua_nbarang">Semua \nBarang</string>
    <string name="ditawar">Sedang \nDitawar</string>
    <string name="terjual">Product \nTerjual</string>
    <string name="semua_product">Semua Product</string>
    <string name="diterima_text">Pengajuan diterima, kamu akan segera di hubungi oleh seller</string>
    <string name="not_login">Anda Belum login silahkan login terlebih dahulu</string>
    <string name="ditolak_text">Pengajuan Kamu Di Tolak :(</string>
    <string name="menunggu_text">Menunggu Respon Penjual</string>
    <string name="ilustrasi">Ilustrasi</string>
    <string name="penawaran_terkirim">Yeay!!! Harga tawarmu\n berhasil dikirim\n ke penjual</string>
    <string name="penawaran_diterima">Yeay!!! Barang kamu\n berhasil terjual</string>
    <string name="penawaran_ditolak">Wah Maaf Banget, mungkin\n belum rezeki, yuk cek\n penawaran lainnya</string>
    <string name="click">Tekan dimana saja untuk\n kembali ke Homescreen</string>
    <string name="terapkan">Terapkan</string>
    <string name="nama_penawar">Nama Penawar</string>
    <string name="total_pencarian">Total Pencarian Ditemukan</string>
    <string name="cari_apa">lagi mau cari apa nich?</string>
    <string name="back">Back</string>
    <string name="pencarian_tidak_ditemukan">Pencarian Tidak Ditemukan</string>
    <string name="login">Login</string>
    <string name="login_dulu">Anda Harus Login Terlebih Dahulu !</string>
    <string name="daftar_simpan">Daftar Simpan</string>
    <string name="belum_ada_notifikasi">Belum ada Notifikasi</string>
    <string name="kosong_diterima">Belum Ada Product Yang Diterima</string>
    <string name="kosong_ditolak">Belum Ada Product Yang Ditolak</string>
    <string name="kosong_tawaran">Belum Ada Yang Menawar</string>
    <string name="kosong_pengajuan">Belum Ada Pengajuan</string>
    <string name="kosong_barang">Belum Ada Product</string>
    <string name="terjual_text">Terjual</string>
    <string name="kosong_terjual">Belum Ada Product Terjual</string>
    <string name="kosong_tersimpan">Belum Ada Product Tersimpan</string>
    <string name="onboarding_satu">Selamat datang \ndi CuanCuan</string>
    <string name="icon">icon</string>

</resources>