<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru_muda"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.transaksipenjual.PenawaranDitolakFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:backgroundTint="@color/abu_muda_dua"
        android:layout_width="320dp"
        android:layout_height="260dp">

        <TextView
            android:text="@string/ilustrasi"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:text="@string/penawaran_ditolak"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:typeface="serif"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/click"
        android:textColor="@color/white"
        android:layout_marginTop="64dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>