<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SellFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/top"
            android:src="@drawable/ic_bc_top"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/background"
            android:layout_width="match_parent"
            android:layout_height="132dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            app:icon="@drawable/ic_baseline_keyboard_arrow_left"
            style="@style/Widget.AppCompat.ActionButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintEnd_toStartOf="@id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            android:text="@string/ldp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/ll_produk"
            app:layout_constraintTop_toBottomOf="@id/top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/nama_produk"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nama_produk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusBottomEnd="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama_produk"
                    android:hint="@string/nama_produk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="@string/harga_produk"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_harga_produk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusBottomEnd="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_harga_produk"
                    android:hint="@string/rp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="@string/kategori"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_kategori"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/pilih_kategori"
                app:boxCornerRadiusTopStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusBottomEnd="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="@string/deskripsi"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_deskripsi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:isScrollContainer="true"
                app:boxCornerRadiusTopStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusBottomEnd="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_deskripsi"
                    android:hint="@string/contoh"
                    android:inputType="textMultiLine|text"
                    android:gravity="top"
                    android:textAlignment="inherit"
                    android:layout_width="match_parent"
                    android:layout_height="96dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="@string/foto_produk"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/add_foto"
                android:src="@drawable/ic_add_product"
                android:layout_marginTop="8dp"
                android:contentDescription="Photo"
                android:layout_width="96dp"
                android:layout_height="96dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_button"
            app:layout_constraintTop_toBottomOf="@id/ll_produk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="64dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:weightSum="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_preview"
                android:layout_weight="50"
                android:text="@string/preview"
                android:textColor="@color/abu_muda_dua"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/abu_muda_dua"
                app:strokeWidth="1dp"
                android:layout_marginHorizontal="24dp"
                android:textAllCaps="false"
                app:cornerRadius="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_terbitkan"
                android:layout_weight="50"
                android:text="@string/terbitkan"
                android:textColor="@color/white"
                android:background="@drawable/gradient_button"
                android:layout_marginHorizontal="24dp"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>