<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru_muda"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.transaction.EditOrderFragment">
    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/cv_product"
        android:layout_margin="12dp"
        app:cardCornerRadius="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_foto_product"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="center"
                android:src="@drawable/default_image"
                android:contentDescription="@string/photo"
                android:layout_width="match_parent"
                android:layout_height="156dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_up"
                android:drawableBottom="@drawable/ic_btn"
                style="@style/Widget.AppCompat.ActionButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_foto_product"
                app:layout_constraintBottom_toBottomOf="@id/iv_foto_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_nama_product"
                android:text="@string/nama_produk"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_foto_product"
                app:layout_constraintBottom_toTopOf="@id/tv_harga"
                android:textSize="18sp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="6dp"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_harga"
                android:text="@string/harga"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_nama_product"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="16sp"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="6dp"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_deskripsi"
        android:layout_margin="12dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/cv_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_kirim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_perintah"
                android:text="@string/masukkan"
                android:fontFamily="@font/poppins_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_isi"
                android:text="@string/isi"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_harga_tawaran"
                android:text="@string/harga_tawaran"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_tawar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.cottacush.android.currencyedittext.CurrencyEditText
                    android:id="@+id/et_tawar"
                    android:hint="@string/harga_produk"
                    android:ems="10"
                    app:currencySymbol="Rp "
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_kirim"
        app:layout_constraintTop_toBottomOf="@id/cv_deskripsi"
        android:text="@string/kirim"
        android:textColor="@color/abu_muda_dua"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/abu_muda_dua"
        android:padding="12dp"
        app:strokeWidth="1dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"
        app:cornerRadius="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>