<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaksipenjual.SedangDitawarFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/empty_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/empty"
            app:lottie_loop="true"
            app:lottie_speed="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmpty"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/biru"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/kosong_tawaran"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_bc"
        android:src="@drawable/ic_bc_top"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/sedang_ditawar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/btn_back"
        android:src="@drawable/ic_back"
        android:backgroundTint="@color/transparant"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="14dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:text="Sedang Ditawar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_nego"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_bc"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="45dp"
        tools:listitem="@layout/item"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>